[package]
name = "fast_image_resize_jni"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_image_resize_jni"
crate-type = ["cdylib"]

[dependencies]
fast_image_resize = { path = ".." }
jni = { version = "0.21.1", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.6.0"
